--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,14 @@
 	<packaging>war</packaging>
 	<name>flyway-db-migration-h2</name>
     <description>flyway-db-migration-h2</description>
-    
 
 	<parent>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-parent</artifactId>
-	    <version>1.5.10.RELEASE</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.1.RELEASE</version>
+		<relativePath/>
 	</parent>
+
 
 	<properties>
         <java.version>1.8</java.version>
